--- a/examples/display/display-droso/seq6531_2L_21853080_21853669.tex
+++ b/examples/display/display-droso/seq6531_2L_21853080_21853669.tex
@@ -8,150 +8,152 @@
 \usepackage{array,multirow}
 \begin{document}
 \noindent
-\newlength{\charwidth}\settowidth{\charwidth}{\texttt{A}}$>$DroMel	seq6531\_2L\_21853080\_21853669	chr2L	21853080	21853669 \\
+\newlength{\charwidth}\settowidth{\charwidth}{\texttt{A}}Motif(s): \textcolor{Red}{Mot\_1}, \textcolor{Blue}{Mot\_2}, \textcolor{Green}{Mot\_3}, \textcolor{Yellow}{Mot\_4}, \textcolor{Brown}{Mot\_5}\\
+\\
+$>$DroMel	seq6531\_2L\_21853080\_21853669	chr2L	21853080	21853669 \\
  \\
-\texttt{DroMel	GAA--CGAACC	-G---TCGAA	AAAGAAAGA-	-GCCTCAGAG	AAAATCTCAT	GGACTGAAA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSim	GAA--CGAACC	G----TCGAA	GAAGAAAGA-	-GCCGCAGAG	GAAATCTCAT	GGACTGAAA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSec	GAA--CGAACC	CG---TCGAA	GAAGAAGGA-	-GCCGCAGAC	GAAATCTCAT	GGACTGAAA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroYak	GAA--CGGACC	T----TTGAT	AAAGAAAAA-	-GCCCCAGAG	GAAATTTCAT	GGACTGAAA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroEre	GAA--CGAATC	TCGAATTGAA	AAAGAAAGA-	-GCCGCTGAG	GAAATCTCAT	GGACTGAAA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroAna	GATATCCATTC	AAGATTCAAG	AAAGAAGAAA	TGCCGCTGAG	AAGATCTCAT	GGATGGAAA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+\texttt{1\hspace*{3\charwidth}DroMel	GAA--CGAAC	C-G---TCGA	AAAAGAAAGA	--GCCTCAGA	GAAAATCTCA	TGGACTGAAA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroSim	GAA--CGAAC	CG----TCGA	AGAAGAAAGA	--GCCGCAGA	GGAAATCTCA	TGGACTGAAA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroSec	GAA--CGAAC	CCG---TCGA	AGAAGAAGGA	--GCCGCAGA	CGAAATCTCA	TGGACTGAAA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroYak	GAA--CGGAC	CT----TTGA	TAAAGAAAAA	--GCCCCAGA	GGAAATTTCA	TGGACTGAAA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroEre	GAA--CGAAT	CTCGAATTGA	AAAAGAAAGA	--GCCGCTGA	GGAAATCTCA	TGGACTGAAA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+1\hspace*{3\charwidth}DroAna	GATATCCATT	CAAGATTCAA	GAAAGAAGAA	ATGCCGCTGA	GAAGATCTCA	TGGATGGAAA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-DroMel	A	CCATAAATTT	GATAATTGAC	TTTCCACC--	----AAAGGA	A-AAGAAGCC	AAAGGAACC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSim	A	CCATAAATTT	GATAATTGAC	TTTCCACC--	----AAAGGA	A-AAGAAACC	GAAGGAACC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSec	A	AAATAAATTT	GATAATTGAC	TTTCCACC--	----AAAGGA	A-AAGAAACC	GAAGGAACC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroYak	A	CCATTAATTT	GAAAATCGAC	TTACAACC--	----AACAGA	AGAAGAAAAC	AAAGGAACG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroEre	A	CCATAAATTT	GATAATTGAC	TTTCCACC--	----AA---A	GGGAAAAACC	GAAGGAACG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroAna	A	CCATAAATTT	GATAATTGAC	TTTCCACCCA	AATGAAAGAA	GAAAGAACAG	AAAGGAACC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+53\hspace*{2\charwidth}DroMel	ACCATAAATT	TGATAATTGA	CTTTCCACC-	-----AAAGG	AA-AAGAAGC	CAAAGGAACC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+53\hspace*{2\charwidth}DroSim	ACCATAAATT	TGATAATTGA	CTTTCCACC-	-----AAAGG	AA-AAGAAAC	CGAAGGAACC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+54\hspace*{2\charwidth}DroSec	AAAATAAATT	TGATAATTGA	CTTTCCACC-	-----AAAGG	AA-AAGAAAC	CGAAGGAACC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+53\hspace*{2\charwidth}DroYak	ACCATTAATT	TGAAAATCGA	CTTACAACC-	-----AACAG	AAGAAGAAAA	CAAAGGAACG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+57\hspace*{2\charwidth}DroEre	ACCATAAATT	TGATAATTGA	CTTTCCACC-	-----AA---	AGGGAAAAAC	CGAAGGAACG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+61\hspace*{2\charwidth}DroAna	ACCATAAATT	TGATAATTGA	CTTTCCACCC	AAATGAAAGA	AGAAAGAACA	GAAAGGAACC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-DroMel	G	A---------	---AAAATTT	CTATTGGCTT	ACACAATCGA	TGAAACACAT	AAATCTTAA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSim	G	A---------	---AAAATTT	CTATTGGCTT	ACACAATCGA	TGAAACACAT	AAATCTTAA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSec	G	A---------	---AAAATTT	ATATTGGCTT	ACACAATCGA	TGAAACACAT	AAATCTTAA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroYak	G	A---------	---AAAATGT	CTATTGGTTT	ACACAATCGA	TGAAATACAT	AAATCTTCA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroEre	G	A---------	---AAAATTT	CTATTTCTTG	A-ACAATCGA	TGAAACACAT	AAATCTTCA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroAna	G	ACAGAAAACA	GAAAAACCCC	CGATTGGCTT	ACATAATCGA	AGAAAAACAT	AAATCTT-C\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+106\hspace*{1\charwidth}DroMel	GA--------	----AAAATT	TCTATTGGCT	TACACAATCG	ATGAAACACA	TAAATCTTAA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+106\hspace*{1\charwidth}DroSim	GA--------	----AAAATT	TCTATTGGCT	TACACAATCG	ATGAAACACA	TAAATCTTAA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+107\hspace*{1\charwidth}DroSec	GA--------	----AAAATT	TATATTGGCT	TACACAATCG	ATGAAACACA	TAAATCTTAA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+107\hspace*{1\charwidth}DroYak	GA--------	----AAAATG	TCTATTGGTT	TACACAATCG	ATGAAATACA	TAAATCTTCA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+108\hspace*{1\charwidth}DroEre	GA--------	----AAAATT	TCTATTTCTT	GA-ACAATCG	ATGAAACACA	TAAATCTTCA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+121\hspace*{1\charwidth}DroAna	GACAGAAAAC	AGAAAAACCC	CCGATTGGCT	TACATAATCG	AAGAAAAACA	TAAATCTT-C	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-DroMel	G	TGAGGGAATT	TAGAAAATCC	AGCCA----C	CTTAAATAGA	CAACTGCAAA	ACGGAAATG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSim	G	TGAGGGAATT	TAGAAAATCC	AGCCA----C	CTTAAATAGA	CAACTGCAAA	ACGGAAATG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSec	G	TGAGGTAATT	TAGAAAATCC	AGCCA----C	CTTAAATAGA	CAACTGCAAA	ACGGAAATG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroYak	G	CG-GG-----	----------	------TCAC	CTTAAAGGAA	CAAATGCAAA	ACGGAAATG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroEre	G	CG-GGGGATT	CAGAAAATCC	AGTCAGTCAC	CTTAAAAAGA	CAACTGCAAA	ACGGAAATG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroAna	G	ACGGGGCACC	CAGAAAACCC	AGTCACTCAC	TTCATATCGA	CAACTGCGAA	ACGGAAATG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+154\hspace*{1\charwidth}DroMel	GTGAGGGAAT	TTAGAAAATC	CAGCCA----	CCTTAAATAG	ACAACTGCAA	AACGGAAATG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+154\hspace*{1\charwidth}DroSim	GTGAGGGAAT	TTAGAAAATC	CAGCCA----	CCTTAAATAG	ACAACTGCAA	AACGGAAATG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+155\hspace*{1\charwidth}DroSec	GTGAGGTAAT	TTAGAAAATC	CAGCCA----	CCTTAAATAG	ACAACTGCAA	AACGGAAATG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+155\hspace*{1\charwidth}DroYak	GCG-GG----	----------	-------TCA	CCTTAAAGGA	ACAAATGCAA	AACGGAAATG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+155\hspace*{1\charwidth}DroEre	GCG-GGGGAT	TCAGAAAATC	CAGTCAGTCA	CCTTAAAAAG	ACAACTGCAA	AACGGAAATG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+180\hspace*{1\charwidth}DroAna	GACGGGGCAC	CCAGAAAACC	CAGTCACTCA	CTTCATATCG	ACAACTGCGA	AACGGAAATG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-DroMel	T	ACATCATAAA	AATATTAAAA	ATTCTCTGTC	ATTCTTCTAA	TATGGTCTTT	TTGGACATT\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSim	T	ACATCATAAA	AATATTAAAA	ATTCTCTGTC	ATTCTTCTAA	TATGGTCTTT	TTGGACATT\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSec	C	ACATCATAAA	AATATTGAAA	ATTCTCTGTC	ATTCTTCTAA	TATGGTCTTT	TTGGACATT\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroYak	T	ACATCATAAA	AATATTAAAA	ATTCTCTCCC	ATTCTTCTAA	TATTGTCTTT	TTA\textcolor{Red}{G}\textcolor{Red}{A}\textcolor{Red}{C}\textcolor{Red}{A}\textcolor{Red}{T}\textcolor{Red}{T}\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{54\charwidth}\textcolor{Red}{6.3}\\
-DroEre	T	ACATCATAAA	AATATTAAAA	ACTCTCCTCC	ATTCTCTTAA	TATTGTCTTT	TTA\textcolor{Red}{G}\textcolor{Red}{A}\textcolor{Red}{C}\textcolor{Red}{A}\textcolor{Red}{T}\textcolor{Red}{T}\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{54\charwidth}\textcolor{Red}{6.9}\\
-DroAna	T	GCATCATAAA	AATATTAAAA	A-CCGGAGAA	ATTC------	--TGGCCTAT	TCTTTGAGT\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+210\hspace*{1\charwidth}DroMel	TACATCATAA	AAATATTAAA	AATTCTCTGT	CATTCTTCTA	ATATGGTCTT	TTTGGACATT	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+210\hspace*{1\charwidth}DroSim	TACATCATAA	AAATATTAAA	AATTCTCTGT	CATTCTTCTA	ATATGGTCTT	TTTGGACATT	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+211\hspace*{1\charwidth}DroSec	CACATCATAA	AAATATTGAA	AATTCTCTGT	CATTCTTCTA	ATATGGTCTT	TTTGGACATT	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+193\hspace*{1\charwidth}DroYak	TACATCATAA	AAATATTAAA	AATTCTCTCC	CATTCTTCTA	ATATTGTCTT	TTTA\textcolor{Red}{G}\textcolor{Red}{A}\textcolor{Red}{C}\textcolor{Red}{A}\textcolor{Red}{T}\textcolor{Red}{T}	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{54\charwidth}\textcolor{Red}{6.3}\hspace*{1\charwidth}\\
+214\hspace*{1\charwidth}DroEre	TACATCATAA	AAATATTAAA	AACTCTCCTC	CATTCTCTTA	ATATTGTCTT	TTTA\textcolor{Red}{G}\textcolor{Red}{A}\textcolor{Red}{C}\textcolor{Red}{A}\textcolor{Red}{T}\textcolor{Red}{T}	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{54\charwidth}\textcolor{Red}{6.9}\hspace*{1\charwidth}\\
+240\hspace*{1\charwidth}DroAna	TGCATCATAA	AAATATTAAA	AA-CCGGAGA	AATTC-----	---TGGCCTA	TTCTTTGAGT	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-DroMel	C	TTGGA-----	--AAGATAAA	AGTCGATGCC	GGTTGGCCGC	CGTTCCAGTG	CATTAGAGA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSim	C	TTAGA-----	--AAGATAAA	AGTCGGTGCC	GGTTGGCCGC	CGTTCCAGTG	CATTAGAGA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSec	C	TTAGA-----	--AAGATAAA	AGTCGGTGCC	GGTTGGCCGC	CGTTCCAGTG	CATTAGAGA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroYak	\textcolor{Red}{C}	\textcolor{Red}{C}\textcolor{Red}{T}\textcolor{Red}{G}GA-----	--AAGATAAA	AGTCAGTGCC	GGTTGGCCGT	CGTTCCAGTG	CATTAGAGA\\
-\hspace*{7\charwidth}\hspace*{0\charwidth}\textcolor{Red}{6.3}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroEre	\textcolor{Red}{C}	\textcolor{Red}{T}\textcolor{Red}{T}\textcolor{Red}{G}GA-----	--AAGATAAA	AGTCGCTGCC	GGTTGGCCGT	CGTTCCAGTG	CATTAGAGA\\
-\hspace*{7\charwidth}\hspace*{0\charwidth}\textcolor{Red}{6.9}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroAna	C	GTGGAGTGAA	GAAAGAGAAA	AGTCCGTACC	GTCGGGGCGT	CGTTCCAGTG	CATTAGGGA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+270\hspace*{1\charwidth}DroMel	CTTGGA----	---AAGATAA	AAGTCGATGC	CGGTTGGCCG	CCGTTCCAGT	GCATTAGAGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+270\hspace*{1\charwidth}DroSim	CTTAGA----	---AAGATAA	AAGTCGGTGC	CGGTTGGCCG	CCGTTCCAGT	GCATTAGAGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+271\hspace*{1\charwidth}DroSec	CTTAGA----	---AAGATAA	AAGTCGGTGC	CGGTTGGCCG	CCGTTCCAGT	GCATTAGAGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+253\hspace*{1\charwidth}DroYak	\textcolor{Red}{C}\textcolor{Red}{C}\textcolor{Red}{T}\textcolor{Red}{G}GA----	---AAGATAA	AAGTCAGTGC	CGGTTGGCCG	TCGTTCCAGT	GCATTAGAGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{0\charwidth}\textcolor{Red}{6.3}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+274\hspace*{1\charwidth}DroEre	\textcolor{Red}{C}\textcolor{Red}{T}\textcolor{Red}{T}\textcolor{Red}{G}GA----	---AAGATAA	AAGTCGCTGC	CGGTTGGCCG	TCGTTCCAGT	GCATTAGAGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{0\charwidth}\textcolor{Red}{6.9}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+291\hspace*{1\charwidth}DroAna	CGTGGAGTGA	AGAAAGAGAA	AAGTCCGTAC	CGTCGGGGCG	TCGTTCCAGT	GCATTAGGGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-DroMel	T	CGCGTTT-AA	AATGGTACCC	CGATGGGCTG	TCAAGGCCGT	AAATCTAGAA	TAGGGGCAC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSim	T	CGCGTTT-AA	AATGGTACCC	CGATGGGCTG	TCAAGGCCGT	AAATCTAGAA	TAGGGGCAC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSec	T	CGCGTTT-AA	AATGGTACCC	CGATGGGCTG	TCAAGGCCGT	AAATCTAGAA	TAGGGGCAC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroYak	T	CGCGTTT-AA	AATGGTACCC	CGATGGGCTG	CCAAGGCCGT	AAATCTACAA	AAGGGGCAC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroEre	T	CGCGTTT-AA	AATGGTACCC	CGATGGGCTG	TCAAGGCCGT	AAATCTAGAA	AAGGGGCAC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroAna	T	AGCATTGGAA	AATGGCAGTT	CAATGGGCTG	TCAAGGTCGT	AAATCTGATA	TAGGGGCAC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+323\hspace*{1\charwidth}DroMel	TCGCGTTT-A	AAATGGTACC	CCGATGGGCT	GTCAAGGCCG	TAAATCTAGA	ATAGGGGCAC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+323\hspace*{1\charwidth}DroSim	TCGCGTTT-A	AAATGGTACC	CCGATGGGCT	GTCAAGGCCG	TAAATCTAGA	ATAGGGGCAC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+324\hspace*{1\charwidth}DroSec	TCGCGTTT-A	AAATGGTACC	CCGATGGGCT	GTCAAGGCCG	TAAATCTAGA	ATAGGGGCAC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+306\hspace*{1\charwidth}DroYak	TCGCGTTT-A	AAATGGTACC	CCGATGGGCT	GCCAAGGCCG	TAAATCTACA	AAAGGGGCAC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+327\hspace*{1\charwidth}DroEre	TCGCGTTT-A	AAATGGTACC	CCGATGGGCT	GTCAAGGCCG	TAAATCTAGA	AAAGGGGCAC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+351\hspace*{1\charwidth}DroAna	TAGCATTGGA	AAATGGCAGT	TCAATGGGCT	GTCAAGGTCG	TAAATCTGAT	ATAGGGGCAC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-DroMel	T	CTTTGCTGCC	CTCTCGTGCA	GCTCATGTA-	TTTTCAT---	----AATTTT	C-ATATTTC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSim	T	CTTTGCTGCC	CTCTCGTGCA	GCTCATGTA-	TTTTCAT---	----AATTTT	C-ATATTTC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSec	T	CTTTGCTGCC	CTCTCGTGCA	GCTCATGTA-	TTTTCAT---	----AATTTT	C-ATATTTC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroYak	T	CTTTGCTGCC	CTCTCGTATA	GCTCTAGTA-	ATTTCATAAT	TTTCA-----	---TATTTC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroEre	T	CCTTGCTGCC	CTCTCGT\textcolor{Red}{G}\textcolor{Red}{T}\textcolor{Red}{A}	\textcolor{Red}{G}\textcolor{Red}{C}\textcolor{Red}{T}\textcolor{Red}{C}\textcolor{Red}{T}\textcolor{Red}{C}\textcolor{Red}{G}TA-	ATTTCATAAT	TTTCAATTTT	C-ATATTTC\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{18\charwidth}\textcolor{Red}{6.8}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroAna	A	CTTCGCTGCC	CTCTCGTGTA	GTTCTTGTAA	TTTTCATAAT	TTTCATATTT	CCACATGGA\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+382\hspace*{1\charwidth}DroMel	TCTTTGCTGC	CCTCTCGTGC	AGCTCATGTA	-TTTTCAT--	-----AATTT	TC-ATATTTC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+382\hspace*{1\charwidth}DroSim	TCTTTGCTGC	CCTCTCGTGC	AGCTCATGTA	-TTTTCAT--	-----AATTT	TC-ATATTTC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+383\hspace*{1\charwidth}DroSec	TCTTTGCTGC	CCTCTCGTGC	AGCTCATGTA	-TTTTCAT--	-----AATTT	TC-ATATTTC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+365\hspace*{1\charwidth}DroYak	TCTTTGCTGC	CCTCTCGTAT	AGCTCTAGTA	-ATTTCATAA	TTTTCA----	----TATTTC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+386\hspace*{1\charwidth}DroEre	TCCTTGCTGC	CCTCTCGT\textcolor{Red}{G}\textcolor{Red}{T}	\textcolor{Red}{A}\textcolor{Red}{G}\textcolor{Red}{C}\textcolor{Red}{T}\textcolor{Red}{C}\textcolor{Red}{T}\textcolor{Red}{C}\textcolor{Red}{G}TA	-ATTTCATAA	TTTTCAATTT	TC-ATATTTC	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{18\charwidth}\textcolor{Red}{6.8}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+411\hspace*{1\charwidth}DroAna	ACTTCGCTGC	CCTCTCGTGT	AGTTCTTGTA	ATTTTCATAA	TTTTCATATT	TCCACATGGA	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-DroMel	T	CCGTGGCTCA	-GCAGCTGCG	CGCCTGCGCT	AAAGTGTCTG	ACGGATGCGG	CGCA-----\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSim	T	CAGTGGCT\textcolor{Blue}{C}\textcolor{Blue}{G}	\textcolor{Blue}{-}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{A}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{T}\textcolor{Blue}{G}\textcolor{Blue}{C}G	AGCCTGCGCA	AAAGTATCTG	ACGGATGCGG	CGTA-----\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{9\charwidth}\textcolor{Blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSec	T	CAGTGGCT\textcolor{Blue}{C}\textcolor{Blue}{G}	\textcolor{Blue}{-}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{A}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{T}\textcolor{Blue}{G}\textcolor{Blue}{C}G	AGCCTGCGCA	AAAGTATCTG	ACGGATGCGG	CGTA-----\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{9\charwidth}\textcolor{Blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroYak	T	CTTTGGCT\textcolor{Blue}{C}\textcolor{Blue}{G}	\textcolor{Blue}{-}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{A}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{T}\textcolor{Blue}{G}\textcolor{Blue}{C}G	CGCCTGCGCC	AAAGTGTTTG	ACGGATGCGG	CGCA-----\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{9\charwidth}\textcolor{Blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroEre	T	TCCTGGCT\textcolor{Blue}{C}\textcolor{Blue}{G}	\textcolor{Blue}{-}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{A}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{T}\textcolor{Blue}{G}\textcolor{Blue}{C}G	CGCCTGCGCT	AAAGTGTTTG	ACGGATGCGG	CGCA-----\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{9\charwidth}\textcolor{Blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroAna	C	CGGCAGCGAG	CGCAGCTGCG	CGCCTGCGCA	AATGTATCTG	ACGGATGCGG	CGCATAGCG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+433\hspace*{1\charwidth}DroMel	TCCGTGGCTC	A-GCAGCTGC	GCGCCTGCGC	TAAAGTGTCT	GACGGATGCG	GCGCA-----	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+433\hspace*{1\charwidth}DroSim	TCAGTGGCT\textcolor{Blue}{C}	\textcolor{Blue}{G}\textcolor{Blue}{-}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{A}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{T}\textcolor{Blue}{G}\textcolor{Blue}{C}	GAGCCTGCGC	AAAAGTATCT	GACGGATGCG	GCGTA-----	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{Blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+434\hspace*{1\charwidth}DroSec	TCAGTGGCT\textcolor{Blue}{C}	\textcolor{Blue}{G}\textcolor{Blue}{-}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{A}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{T}\textcolor{Blue}{G}\textcolor{Blue}{C}	GAGCCTGCGC	AAAAGTATCT	GACGGATGCG	GCGTA-----	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{Blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+416\hspace*{1\charwidth}DroYak	TCTTTGGCT\textcolor{Blue}{C}	\textcolor{Blue}{G}\textcolor{Blue}{-}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{A}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{T}\textcolor{Blue}{G}\textcolor{Blue}{C}	GCGCCTGCGC	CAAAGTGTTT	GACGGATGCG	GCGCA-----	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{Blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+444\hspace*{1\charwidth}DroEre	TTCCTGGCT\textcolor{Blue}{C}	\textcolor{Blue}{G}\textcolor{Blue}{-}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{A}\textcolor{Blue}{G}\textcolor{Blue}{C}\textcolor{Blue}{T}\textcolor{Blue}{G}\textcolor{Blue}{C}	GCGCCTGCGC	TAAAGTGTTT	GACGGATGCG	GCGCA-----	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{9\charwidth}\textcolor{Blue}{6.6}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+471\hspace*{1\charwidth}DroAna	CCGGCAGCGA	GCGCAGCTGC	GCGCCTGCGC	AAATGTATCT	GACGGATGCG	GCGCATAGCG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-DroMel	-	----TTCGAT	TTCGTTCTGC	C\textcolor{Brown}{A}\textcolor{Brown}{A}\textcolor{Brown}{A}\textcolor{Brown}{T}\textcolor{Brown}{T}\textcolor{Brown}{A}\textcolor{Brown}{G}\textcolor{Brown}{C}\textcolor{Brown}{C}	\textcolor{Brown}{G}GGCCCCGTG	ATTTATGTCG	TCCTTCTGG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{22\charwidth}\textcolor{Brown}{8.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSim	-	----TTCGAT	TTCGTTCTGC	CAAATTAGAC	GGGTCCCGTG	ATTTATGGCG	TCCTTCTGG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSec	-	----TTCGAT	TTCGTTCTGC	CAAATTAGAC	GGGTCCCGTG	ATTTATGTCT	TCCTTCTGG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroYak	-	----TTCAAT	TTCGTTCTGC	CAAATTAGCC	AGGCTCTGTG	ATTTATGTCG	TCCTTTTGG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroEre	-	----TTCGAT	TTCGTTCTGG	C\textcolor{Brown}{A}\textcolor{Brown}{A}\textcolor{Brown}{A}\textcolor{Brown}{T}\textcolor{Brown}{T}\textcolor{Brown}{A}\textcolor{Brown}{G}\textcolor{Brown}{C}\textcolor{Brown}{C}	\textcolor{Brown}{G}GGCCCCGTG	ATTTATGTCG	TCCTCCTGG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{22\charwidth}\textcolor{Brown}{8.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroAna	C	AGAGTTCGAT	TTCGTTCTGC	CAAATTAGCC	CGGACCGGTG	ATTTATGTCG	TCCTTCC--\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+486\hspace*{1\charwidth}DroMel	-----TTCGA	TTTCGTTCTG	CC\textcolor{Brown}{A}\textcolor{Brown}{A}\textcolor{Brown}{A}\textcolor{Brown}{T}\textcolor{Brown}{T}\textcolor{Brown}{A}\textcolor{Brown}{G}\textcolor{Brown}{C}	\textcolor{Brown}{C}\textcolor{Brown}{G}GGCCCCGT	GATTTATGTC	GTCCTTCTGG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{22\charwidth}\textcolor{Brown}{8.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+486\hspace*{1\charwidth}DroSim	-----TTCGA	TTTCGTTCTG	CCAAATTAGA	CGGGTCCCGT	GATTTATGGC	GTCCTTCTGG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+487\hspace*{1\charwidth}DroSec	-----TTCGA	TTTCGTTCTG	CCAAATTAGA	CGGGTCCCGT	GATTTATGTC	TTCCTTCTGG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+469\hspace*{1\charwidth}DroYak	-----TTCAA	TTTCGTTCTG	CCAAATTAGC	CAGGCTCTGT	GATTTATGTC	GTCCTTTTGG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+497\hspace*{1\charwidth}DroEre	-----TTCGA	TTTCGTTCTG	GC\textcolor{Brown}{A}\textcolor{Brown}{A}\textcolor{Brown}{A}\textcolor{Brown}{T}\textcolor{Brown}{T}\textcolor{Brown}{A}\textcolor{Brown}{G}\textcolor{Brown}{C}	\textcolor{Brown}{C}\textcolor{Brown}{G}GGCCCCGT	GATTTATGTC	GTCCTCCTGG	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{22\charwidth}\textcolor{Brown}{8.4}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+531\hspace*{1\charwidth}DroAna	CAGAGTTCGA	TTTCGTTCTG	CCAAATTAGC	CCGGACCGGT	GATTTATGTC	GTCCTTCC--	\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
-DroMel	C	TCTTTGGCCG	TTTGTCCCTT	TTAGCCAGTC	CGCGTGACTC	GAGCGTTG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSim	C	CCTTTGGCCG	TTTGGCCCTT	TTAGCCAGTC	CTCGTGACTC	GAGCGTTG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroSec	C	CCTTTGGCCG	TTTGGCCCTT	TTAGCCAGTC	CTCGTGACTC	GAGCGTTG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroYak	C	CTTT------	----------	TCAGTCAGTC	CTCGTGACTC	GAGCGTTG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroEre	C	CCTT-GGCCG	TTTGGTCCTT	TTAGCCAGAC	CCCGTGACTC	GAGCGTTG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
-DroAna	-	----------	-----ATATT	CCAGCCTGTC	TTCGTGACTC	GAGCGTTG\\
-\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+542\hspace*{1\charwidth}DroMel	CTCTTTGGCC	GTTTGTCCCT	TTTAGCCAGT	CCGCGTGACT	CGAGCGTTG\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+542\hspace*{1\charwidth}DroSim	CCCTTTGGCC	GTTTGGCCCT	TTTAGCCAGT	CCTCGTGACT	CGAGCGTTG\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+543\hspace*{1\charwidth}DroSec	CCCTTTGGCC	GTTTGGCCCT	TTTAGCCAGT	CCTCGTGACT	CGAGCGTTG\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+525\hspace*{1\charwidth}DroYak	CCTTT-----	----------	-TCAGTCAGT	CCTCGTGACT	CGAGCGTTG\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+553\hspace*{1\charwidth}DroEre	CCCTT-GGCC	GTTTGGTCCT	TTTAGCCAGA	CCCCGTGACT	CGAGCGTTG\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
+588\hspace*{1\charwidth}DroAna	----------	------ATAT	TCCAGCCTGT	CTTCGTGACT	CGAGCGTTG\\
+\hspace*{4\charwidth}\hspace*{7\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{1\charwidth}\\
 \\
 }
 \end{document}
